# handy_variant

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: handy_variant.hpp
tests/: CMakeLists.txt  test_handy_variant_001.cpp
